<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>dps_for_iot_cmake_module</name>
  <version>0.5.1</version>
  <description>Provide CMake module to find Intel DPS.</description>
  <maintainer email="todd.malsbary@intel.com">Todd Malsbary</maintainer>
  <license>Apache License 2.0</license>
  <author>Todd Malsbary</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>scons</buildtool_depend>

  <build_depend>git</build_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
